--- a/DeviceManager/Views/Account/Index.cshtml
+++ b/DeviceManager/Views/Account/Index.cshtml
@@ -85,7 +85,7 @@
 
             <button type="submit" class="btn btn-success">Log in</button>
 
-            <a asp-action="Register" class="btn btn-primary">Register</a>
+           @*  <a asp-action="Register" class="btn btn-primary">Register</a> *@
         </form>
 
         <div class="small-link">
