--- a/DeviceManager/Views/Home/Index.cshtml
+++ b/DeviceManager/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
         </div>
 
         <div class="col-md-3">
-            <div class="stat-card bg-warning shadow-sm text-dark">
+            <div class="stat-card bg-warning shadow-sm text-white">
                 <h6>Unassigned</h6>
                 <div class="stat-value">@Model.UnassignedDevices</div>
             </div>
