--- a/DeviceManager/Views/Account/Login.cshtml
+++ b/DeviceManager/Views/Account/Login.cshtml
@@ -32,7 +32,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Log in</button>
-    <a asp-action="Register" asp-controller="Account" class="btn btn-link">Register</a>
+   @*  <a asp-action="Register" asp-controller="Account" class="btn btn-link">Register</a> *@
 </form>
 
 @section Scripts {
