--- a/DeviceManager/Views/Account/Register.cshtml
+++ b/DeviceManager/Views/Account/Register.cshtml
@@ -19,13 +19,13 @@
 
     <div class="mb-3">
         <label asp-for="Password" class="form-label"></label>
-        <input asp-for="Password" class="form-control" />
+        <input asp-for="Password" class="form-control" placeholder="Minimum 4 characters" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
 
     <div class="mb-3">
         <label asp-for="ConfirmPassword" class="form-label"></label>
-        <input asp-for="ConfirmPassword" class="form-control" />
+        <input asp-for="ConfirmPassword" class="form-control" placeholder="Minimum 4 characters" />
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
     </div>
 
