--- a/DeviceManager/Views/Users/Create.cshtml
+++ b/DeviceManager/Views/Users/Create.cshtml
@@ -7,6 +7,7 @@
 <h2>Create User</h2>
 
 <form asp-action="Create" method="post">
+    <div asp-validation-summary="All" class="text-danger"></div>
 
 @Html.AntiForgeryToken()
     <div class="mb-3">
@@ -26,6 +27,36 @@
         <label>Confirm Password</label>
         <input asp-for="ConfirmPassword" class="form-control" />
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Role" class="form-label"></label>
+        <select asp-for="Role" class="form-control">
+            <option value="">Select a role</option>
+            <option value="Admin">Admin</option>
+            <option value="Manager">Manager</option>
+            <option value="Technician">Technician</option>
+            <option value="Viewer">Viewer</option>
+        </select>
+        <span asp-validation-for="Role" class="text-danger"></span>
+    </div>
+
+
+    <div id="technicoanFields">
+        <div class="=mb-3">
+            <label asp-for="FullName"></label>
+            <input asp-for="FullName" class="form-control" />
+        </div>
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Phone"></label>
+        <input asp-for="Phone" class="form-control" />
+    </div>
+
+    <div class="mb-3">
+        <label asp-for="Expertise"></label>
+        <input asp-for="Expertise" class="form-control" />
     </div>
 
     <button type="submit" class="btn btn-success">Save</button>
