--- a/DeviceManager/Views/Shared/_Layout.cshtml
+++ b/DeviceManager/Views/Shared/_Layout.cshtml
@@ -67,6 +67,10 @@
                                 <li class="nav-item">
                                     <a class="nav-link fw-semibold" asp-controller="Users" asp-action="Index">Users</a>
                                 </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link fw-semibold" asp-controller="Devices" asp-action="Overview">Overview</a>
+                                </li>
                             }
 
                             @* Manager menu *@
@@ -126,7 +130,7 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link fw-semibold" asp-controller="Account" asp-action="Index">Login</a>
+                                <a class="nav-link fw-semibold" asp-controller="Account" asp-action="Login">Login</a>
                             </li>
 
                            @*  <li class="nav-item">
